--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+      login
+        </title>
+    </head>
+    <style rel="stylesheet.css" href="styles.css">         
+    </style>
+    <script src="App.js"></script>
+    <body>
+    <center><h1>Welcome To Login Page</h1></center>
+    <hr>
+
+    <div>
+     username:<br>
+     <input type="text" name="text" id="username">
+     <br><br>
+
+     password:<br>
+     <input type="password" name="text" id="password">
+     <br><br>
+
+     <button onclick="login()">Submit</button>
+     </div>
+    </body>
+</html>
 
