--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       login
         </title>
     </head>
-    <style rel="stylesheet.css" href="styles.css">         
-    </style>
+    <link rel="stylesheet.css" href="styles.css">         
+
     <script src="App.js"></script>
     <body>
     <center><h1>Welcome To Login Page</h1></center>
