--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>
-      login
+      login form
         </title>
-    </head>
+  
     <link rel="stylesheet.css" href="styles.css">         
 
     <script src="App.js"></script>
+    </head>
     <body>
     <center><h1>Welcome To Login Page</h1></center>
     <hr>
