--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <title>
       login form
         </title>
-  
-    <link rel="stylesheet.css" href="styles.css">         
-
+   <link rel="stylesheet" href="styles.css">
     <script src="App.js"></script>
     </head>
     <body>
