--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <input type="password" name="text" id="password">
      <br><br>
 
-     <button onclick="login()">Submit</button>
+     <a href="page.html"><button onclick="login()">Submit</button></a>
      </div>
     </body>
 </html>
