--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
 	<title>page</title>
 </head>
 <body>
-<center><h1>Welcime to Successful Login Page</h1></center>
+<center><h1>Welcome to Successful Login Page</h1></center>
 <hr>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
