--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <div class="card card-2 hide">
     <div class="card-container">
       
-        <img src="./images/illustration-thank-you.svg" alt='icon Star'>
+        <img src="star.png" alt='icon Star'>
    
       <div class="card-body">
 
