--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
 
-<script type="text/javascript" src="./main.js"> </script>
+<script type="text/javascript" src="./App.js"> </script>
  
 
   <!-- Thank you state end -->
