--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
@@ -49,29 +49,6 @@
     </div>
   </div>
 </div>
-  <!-- Rating state start -->
-
-
-
-  
-
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-
-
-
 <script type="text/javascript" src="./App.js"> </script>
- 
-
-  <!-- Thank you state end -->
-
-  
-<!--   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
